Colab을 통해 생성됨

--- a/01_Linear_Regression.ipynb
+++ b/01_Linear_Regression.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1tje3I81GKvpRIWiPGwIiZeEv84V6DDOB",
-      "authorship_tag": "ABX9TyNpDQhOAVOcFajFm7pJy0nn",
+      "authorship_tag": "ABX9TyNqFG+ZOzRE9moTZabeNuq9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DT8dtfeqB0Ae",
-        "outputId": "1c1723d0-7b6c-4346-d074-e36494f3558c"
+        "outputId": "e0f5f092-b54e-46d1-d7f9-98141fe26d0c"
       },
       "outputs": [
         {
@@ -77,7 +77,7 @@
       "metadata": {
         "id": "pKW7rMermHra"
       },
-      "execution_count": 5,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -88,7 +88,7 @@
       "metadata": {
         "id": "B8uzHoQQmPJp"
       },
-      "execution_count": 6,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -102,9 +102,9 @@
           "height": 206
         },
         "id": "eb0YImBUnErP",
-        "outputId": "8617f76a-3016-4d3d-a6b8-8c6e529b2d5f"
+        "outputId": "47c947ea-ed88-4fe8-8ebe-178cd36f2aa2"
       },
-      "execution_count": 8,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -119,7 +119,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-09ec5fac-ddfa-419c-806a-eec9b7597d3c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c7642e46-36d3-425d-b022-613a3cc072b4\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -174,7 +174,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-09ec5fac-ddfa-419c-806a-eec9b7597d3c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c7642e46-36d3-425d-b022-613a3cc072b4')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -226,12 +226,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-09ec5fac-ddfa-419c-806a-eec9b7597d3c button.colab-df-convert');\n",
+              "        document.querySelector('#df-c7642e46-36d3-425d-b022-613a3cc072b4 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-09ec5fac-ddfa-419c-806a-eec9b7597d3c');\n",
+              "        const element = document.querySelector('#df-c7642e46-36d3-425d-b022-613a3cc072b4');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -251,8 +251,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-d290f3fe-0dbb-4282-ac62-526b48da5785\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d290f3fe-0dbb-4282-ac62-526b48da5785')\"\n",
+              "<div id=\"df-16b27c51-cabf-43a2-95b6-12a1f4ac516a\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-16b27c51-cabf-43a2-95b6-12a1f4ac516a')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -371,7 +371,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-d290f3fe-0dbb-4282-ac62-526b48da5785 button');\n",
+              "        document.querySelector('#df-16b27c51-cabf-43a2-95b6-12a1f4ac516a button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -388,7 +388,119 @@
             }
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = dataset.iloc[:, :-1].values\n",
+        "y = dataset.iloc[:, -1].values\n",
+        "x, y"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QOKvYQgGnHpH",
+        "outputId": "22730785-c5b1-4ac9-cb51-04a0f5327c0e"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([[ 0.5],\n",
+              "        [ 1.2],\n",
+              "        [ 1.8],\n",
+              "        [ 2.4],\n",
+              "        [ 2.6],\n",
+              "        [ 3.2],\n",
+              "        [ 3.9],\n",
+              "        [ 4.4],\n",
+              "        [ 4.5],\n",
+              "        [ 5. ],\n",
+              "        [ 5.3],\n",
+              "        [ 5.8],\n",
+              "        [ 6. ],\n",
+              "        [ 6.1],\n",
+              "        [ 6.2],\n",
+              "        [ 6.9],\n",
+              "        [ 7.2],\n",
+              "        [ 8.4],\n",
+              "        [ 8.6],\n",
+              "        [10. ]]),\n",
+              " array([ 10,   8,  14,  26,  22,  30,  42,  48,  38,  58,  60,  72,  62,\n",
+              "         68,  72,  58,  76,  86,  90, 100]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.linear_model import LinearRegression\n",
+        "reg = LinearRegression()  # Create Object\n",
+        "reg.fit(x, y) # Learning"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 75
+        },
+        "id": "is4VeK9BpWQt",
+        "outputId": "476888b1-8b4c-4d0b-b604-7a4a50950749"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LinearRegression()"
+            ],
+            "text/html": [
+              "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LinearRegression</label><div class=\"sk-toggleable__content\"><pre>LinearRegression()</pre></div></div></div></div></div>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_pred = reg.predict(x) # predict of X\n",
+        "y_pred"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "je5LrSWTqUCK",
+        "outputId": "7edc2414-570e-422d-af06-0c0d75cc1a45"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([  5.00336377,  12.31395163,  18.58016979,  24.84638795,\n",
+              "        26.93512734,  33.20134551,  40.51193337,  45.73378184,\n",
+              "        46.77815153,  52.        ,  55.13310908,  60.35495755,\n",
+              "        62.44369694,  63.48806663,  64.53243633,  71.84302419,\n",
+              "        74.97613327,  87.5085696 ,  89.59730899, 104.2184847 ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
         }
       ]
     },
@@ -396,7 +508,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "QOKvYQgGnHpH"
+        "id": "caevflWuqhJ3"
       },
       "execution_count": null,
       "outputs": []
