Colab을 통해 생성됨

--- a/01_Linear_Regression.ipynb
+++ b/01_Linear_Regression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP16ZabGzxwh/4TEZRMAe0c",
+      "authorship_tag": "ABX9TyM700Hm3FAGW1zFuhybrpMe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -48,13 +48,7 @@
       "source": [
         "from google.colab import drive\n",
         "mountpoint = '/sample_data'\n",
-        "# /content\n",
-        "# /content/sample_data\n",
-        "# !ls /content/drive\n",
-        "drive.mount(mountpoint, force_remount = True)\n",
-        "#Load the dataset\n",
-        "# with open('./data/linear_regression.pickle', 'rb') as f:\n",
-        "  # X, y = pickle.load(f)"
+        "drive.mount(mountpoint, force_remount = True)"
       ]
     },
     {
@@ -76,7 +70,7 @@
       "metadata": {
         "id": "pKW7rMermHra"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -87,7 +81,7 @@
       "metadata": {
         "id": "B8uzHoQQmPJp"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -103,7 +97,7 @@
         "id": "eb0YImBUnErP",
         "outputId": "47c947ea-ed88-4fe8-8ebe-178cd36f2aa2"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -405,7 +399,7 @@
         "id": "QOKvYQgGnHpH",
         "outputId": "22730785-c5b1-4ac9-cb51-04a0f5327c0e"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -455,7 +449,7 @@
         "id": "is4VeK9BpWQt",
         "outputId": "476888b1-8b4c-4d0b-b604-7a4a50950749"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -485,7 +479,7 @@
         "id": "je5LrSWTqUCK",
         "outputId": "7edc2414-570e-422d-af06-0c0d75cc1a45"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -521,7 +515,7 @@
         "id": "caevflWuqhJ3",
         "outputId": "26bec940-b344-4ba4-d30a-120c16c6d92d"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -548,7 +542,7 @@
         "id": "BGDv7VQGrJB_",
         "outputId": "11cb27b4-3b63-49ba-c16a-4fcd96dd2a0e"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -571,7 +565,7 @@
         "id": "nY3TbC9irkLL",
         "outputId": "015e4bf1-9ec3-4203-a3b7-ba39d09a21d9"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -597,7 +591,7 @@
         "id": "QNZTruptsbiZ",
         "outputId": "d865f7a4-b437-4d0e-d478-a73bca5fd2cb"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -625,7 +619,7 @@
         "id": "dGtY6LvosngH",
         "outputId": "b767c03b-844b-4e9c-ad8f-d6e3e1497ba9"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -673,7 +667,7 @@
         "id": "0S7I436GUJ3c",
         "outputId": "53f35735-4dd8-443f-86c8-53e0e76396fc"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1115,7 +1109,7 @@
       "metadata": {
         "id": "utK-PULWVREn"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1127,7 +1121,7 @@
       "metadata": {
         "id": "NEMdf-zdUpOv"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1142,7 +1136,7 @@
         "id": "HMVoXytIWAaX",
         "outputId": "0dab13b2-12af-492f-a80c-e690a4e67e1e"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1188,7 +1182,7 @@
         "id": "KO1hsMbYWFG-",
         "outputId": "562a2ca4-6553-4227-d295-275f199b32d2"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1230,7 +1224,7 @@
         "id": "_45xIq-SWOJc",
         "outputId": "86e0cd76-ed77-4fb4-b35a-e00d32a02138"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1260,7 +1254,7 @@
         "id": "3e67SvwqWZPC",
         "outputId": "431dc512-72f4-4b5e-b1da-fa759b0d0e3a"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1288,7 +1282,7 @@
         "id": "e3j-jNe4WeVB",
         "outputId": "e455e71a-31ee-4ca8-9899-d580d317c08b"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1314,7 +1308,7 @@
         "id": "L5a8YWfrWhLh",
         "outputId": "ef47550b-a9dd-42de-fc7f-4f6cd4ebb48a"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1346,7 +1340,7 @@
       "metadata": {
         "id": "npCuUwMxWvGu"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1362,7 +1356,7 @@
         "id": "dbMuVagCW4PV",
         "outputId": "e3775be1-712c-40af-fee6-ea3310d70f95"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1406,7 +1400,7 @@
         "id": "KaA5cIzVXOyJ",
         "outputId": "45d811d9-6e0d-4b15-ba8c-0c3a8d5cfe85"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1447,7 +1441,7 @@
         "id": "dI0NTy3vYZ-G",
         "outputId": "050c252b-10ed-4462-c561-c0d4c13feeec"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1473,7 +1467,7 @@
         "id": "2Gm_2esUY6-m",
         "outputId": "afedf37d-4788-4ac9-eb98-3bf5ea78aafc"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1499,7 +1493,7 @@
         "id": "gRVTpDsLZEiD",
         "outputId": "cc958ffd-04cf-46f8-8f2b-7e0405dd0780"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1534,7 +1528,7 @@
         "id": "2HvSaN3qZVax",
         "outputId": "9d61f09d-eac7-4fee-9799-dd74b3e5a650"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1560,7 +1554,7 @@
         "id": "EhCmQkZKZcK_",
         "outputId": "85aa4ded-1537-439c-b635-b554a1786449"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1618,7 +1612,7 @@
         "id": "7lO9broacFiZ",
         "outputId": "08636e43-1850-42a6-dc89-4876d12e8b01"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1930,7 +1924,7 @@
         "id": "CO4cyO0fcfe1",
         "outputId": "f08f1268-c18a-4bd0-9a95-1a0a0eeee093"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1956,7 +1950,7 @@
         "id": "QSDUY6XIdHiO",
         "outputId": "2f5a6246-3379-48fd-970c-82c4df90881b"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1982,7 +1976,7 @@
         "id": "XmT5I8F1dUNz",
         "outputId": "bdba2d71-67dc-415a-c161-bb0adef72756"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2008,7 +2002,7 @@
         "id": "OlQMJEF7dg_R",
         "outputId": "6bbab1ab-5711-4e95-e35c-c012063fd7f5"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
